<resources>
    <string name="app_name">Manager Money VC</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Thêm</string>
    <string name="summary">Biểu đồ</string>
    <string name="report">Tổng Quan</string>
    <string name="type_currencies">Loại tiền tệ</string>
    <string name="et_note">Ghi chú</string>
    <string name="number">Nhập số tiền</string>
    <string name="category">Danh mục</string>
    <string name="category_expense">Danh mục chi phí</string>
    <string name="category_income">Danh mục thu nhập</string>
    <string name="date">Ngày</string>
    <string name="food">Food</string>
    <string name="money">Money</string>
    <string name="note">Ghi chú</string>
    <string name="title_time">Thời gian tìm kiếm</string>
    <string name="et_summary_month">Tháng</string>
    <string name="et_summary_year">Ngày</string>
    <string name="total_balance">Số tiền trong ví của bạn</string>
    <string name="expense">Chi phí</string>
    <string name="in_come">Thu nhập</string>
    <string name="gioi_thieu">Chào mừng bạn đến với Ứng dụng quản lý tài chính cá nhân. Hãy bắt đầu quản lý tiền của mình bằng cách nhập số tiền bạn có</string>
    <string name="bieu_do">Biểu đồ tròn chi phí/thu nhập</string>
    <string name="detail_money">Chi tiết giao dịch</string>
    <string name="txt_title_amount">Số tiền</string>
    <string name="delete">Xóa</string>
    <string name="update">Lưu</string>
    <string name="register_new_account">Đăng ký tài khoản mới</string>
    <string name="login">Đăng nhập</string>
    <string name="language">Tiếng Việt</string>
    <string name="welcome">Chào mừng bạn đến với \n Quản lý tài chính cá nhân \n dễ dàng và tiện lợi quản lý tài chính \n Đăng ký ngay lần đầu tiên để trở thành nhà quản lý tài chính thông minh!</string>
    <string name="manager">Kiểm soát thu chi, tiết kiệm đơn giản</string>
    <string name="discover">Khám phá tính năng đa dạng của ứng dụng quản lý tài chính cá nhân để quản lý tài sản, thanh toán hóa đơn, đầu tư và đổi mới cuộc sống tài chính của bạn.</string>
    <string name="number_phone_email">Số điện thoại hoặc email</string>
    <string name="pass">Mật khẩu</string>
    <string name="text_forgot_pass">Quên mật khẩu</string>
    <string name="text_sign_up">Đăng ký</string>
    <string name="text_or_login_with">Hoặc đăng nhập bằng</string>
    <string name="text_last_name">Tên</string>
    <string name="text_first_name">Họ</string>
    <string name="email">Email</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="securyti">Bạn có đông ý với các điều khoản dịch vụ và chính sách bảo mật</string>
    <string name="by_clicking">Bạn đã có tài khoản?</string>
    <string name="sign_in">Đăng nhập ngay bây giờ</string>
    <string name="title_activity_ndmain">NDMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Cài đặt</string>
    <string name="menu_slideshow">Biểu đồ</string>
    <string name="total">Tổng cộng</string>
    <string name="acounts">Tài khoản</string>
    <string name="edit_category">Chỉnh sửa danh mục</string>
    <string name="type_category">Loại</string>
    <string name="planned_outlay">Hạn mức/tháng</string>
    <string name="icon">Hình ảnh</string>
    <string name="color">Màu sắc</string>
    <string name="delete_category">Xóa</string>
    <string name="icon_catalog">Danh mục biểu tượng</string>
    <string name="category_name">Tên danh mục</string>
    <string name="text_planned">Nhập hạn mức</string>
    <string name="create_category">Tạo danh mục</string>
    <string name="acounts_name">Tên account</string>
    <string name="vaule_total">Số tiền của bạn</string>
    <string name="menu_currency">Tỉ giá</string>
    <string name="text_sreach">Tìm kiếm</string>
    <string name="start">Bắt đầu</string>
    <string name="add_transaction">Thêm giao dịch</string>
    <string name="text_comment">Ghi chú</string>
    <string name="not_selected">Chưa chọn</string>
    <string name="not_data">Không tồn lại quốc gia</string>
    <string name="text_select_account">Lựa chọn tài khoản</string>
    <string name="text_cancel">Kết thúc</string>
    <string name="add_category">Thêm danh mục</string>
    <string name="currency_exchange">Ký hiệu tiền tệ cho tất cả các giao dịch sẽ được thay đổi từ</string>
    <string name="currency_exchange1">Tuy nhiên , số tiền giao dịch sẽ không được quy đổi dựa trên tỷ giá hối đoái.</string>
    <string name="edit_money_account">Chỉnh sửa tài khoản</string>
    <string name="select_moth">Chọn tháng</string>
    <string name="text_ok">Có</string>
    <string name="amount_of_money">Số tiền</string>
    <string name="money_account">Tài khoản</string>
    <string name="day">Ngày</string>
    <string name="transaction_delete_confirmation">Bạn có chắc chắn muốn xóa giao dịch không</string>
    <string name="announcement_title">Thống kê các khoản chi tiêu và thu nhập</string>
    <string name="request_permission">Bạn hãy cấp quyền truy cập bộ nhớ</string>
    <string name="export_data_as">Xuất dữ liệu thống kê dưới dạng":" </string>
    <string name="excel">Excel</string>
    <string name="csv">CSV</string>
    <string name="text_export">Xuất</string>
    <string name="text_cancel1">Hủy</string>
    <string name="reminder">Thông báo</string>
    <string name="text_remind">Nhắc nhở</string>
    <string name="text_create">Tạo</string>
    <string name="edt_notification">Chỉnh sửa nhắc nhở</string>
    <string name="text_name_notification">Tên lời nhắc</string>
    <string name="text_frequency_of_reminders">Tần suất nhắc nhở</string>
    <string name="text_reminder_start_date">Ngày bắt đầu nhắc nhở</string>
    <string name="title_hour">Giờ</string>
    <string name="menu_once">Một lần</string>
    <string name="menu_daily">Hằng ngày</string>
    <string name="menu_weekly">Một tuần một lần</string>
    <string name="menu_monthly">Một tháng một lần</string>
    <string name="menu_quarterly">Một quý một lần</string>
    <string name="menu_yearly">Một năm một lần</string>
    <string name="text_save">Lưu</string>
    <string name="transaction_delete_notification">Bạn có chắn chắn muốn xóa lời nhắc không?</string>
    <string name="menu_account">Tài khoản</string>
    <string name="not_data_transaction">Không tồn tại dữ liệu</string>
    <string name="text_edti_transaction">Chỉnh sửa giao dịch</string>
    <string name="the_transaction_has_been_changed">Giao dịch đã được thay đổi</string>
    <string name="exit_without_saving">Thoát mà không lưu?</string>
    <string name="dialog_message">Thông báo</string>
    <string name="text_no">Không</string>
    <string name="transaction_limit">Vượt hạn mức giao dịch</string>
    <string name="new_start">Bắt đầu ngay</string>
    <string name="currency_conversion">Quy đổi tiền tệ</string>
    <string name="search_by_code_name_symbol">Tìm theo mã, tên, ký hiệu</string>
    <string name="exchange_rate_update_successful">Cập nhật tỷ giá thành công</string>
    <string name="utilities">Tiện ích</string>
    <string name="text_select_language">Lựa chọn ngôn ngữ</string>
    <string name="tieng_viet">Tiếng Việt</string>
    <string name="vn">Tiếng Việt</string>
    <string name="gb">English</string>
    <string name="cn">中国人</string>
    <string name="in_l">इंडोनेशियाई भाषा</string>
    <string name="la">ປະເທດລາວ</string>
    <string name="kr">한국인</string>
    <string name="de">Deutschland</string>
    <string name="jp">日本語</string>
    <string name="fr">Langue française</string>
    <string name="month">Tháng</string>
    <string name="year">Năm</string>
    <string name="period">Khoảng thời gian</string>
    <string name="list_category_null">Danh sách chưa có dữ liệu. Không thể xuất file null!</string>
    <string name="remind">Nhắc nhở</string>
    <string name="reminde_notes">Đừng quên bổ sung chi tiêu của bạn cho ngày hôm nay</string>
    <string name="choose_a_time_period">Chọn khoảng thời gian</string>
    <string name="category_names_cannot_be_left_blank">Tên danh mục không được bỏ trống!</string>
    <string name="please_enter_the_value">Vui lòng nhập giá trị</string>
    <string name="you_entered_the_wrong_format">Bạn nhập sai định dạng!</string>
    <string name="general">Chung</string>
    <string name="you_don_t_have_data_yet">Bạn chưa có dữ liệu!</string>
    <string name="you_have_not_entered_a_reminder_name">Bạn chưa nhập tên lời nhắc!</string>
    <string name="you_have_not_entered_a_note">Bạn chưa nhập ghi chú!</string>
    <string name="notification">Thông báo</string>
    <string name="wall">thành</string>
    <string name="type_money">Loại tiền</string>
    <string name="personal_financial_management_application">Ứng dụng quản lý tài chính cá nhân.</string>
    <string name="welcome_to">Chào mừng bạn đến với</string>
    <string name="start_managing_your_money_by_entering_the_amount_you_have">Hãy bắt đầu quản lý tiền của mình bằng cách nhập số tiền bạn có.</string>
    <string name="please_enter_data">Số tiền hiện tại của bạn là bao nhiêu. Vui lòng nhập dữ liệu!</string>
    <string name="main_account">Tài khoản chính</string>
    <string name="register_now">Đăng ký ngay lần đầu tiên để trở thành nhà quản lý tài chính thông minh!</string>
    <string name="you_have_not_selected_a_category">Bạn chưa lựa chọn Danh mục</string>
    <string name="loading">Đang tải</string>
    <string name="family">Gia đình</string>
    <string name="other">Khác</string>
    <string name="bonus">Thưởng</string>
    <string name="invest">Đầu tư</string>
    <string name="wage">Lương</string>
    <string name="health">Sức khỏe</string>
    <string name="move">Di chuyển</string>
    <string name="exceeding_the_limit">Vượt hạn mức:</string>
    <string name="text_delete_all_data">Xóa tất cả dữ liệu</string>
    <string name="text_language">Ngôn ngữ</string>
    <string name="text_privacy_policy">Chính sách bảo mật</string>
    <string name="text_restore_purchase">Khôi phục các giao dịch mua</string>
    <string name="text_don_round">Không làm tròn</string>
    <string name="text_default_period">Khoảng thời gian mặc định</string>
    <string name="text_pin">Pin</string>
    <string name="menu_weekly_1">Tuần</string>
    <string name="mess_delete_all_data">Tất cả dữ liệu của bạn trong ứng dụng sẽ bị xóa khỏi thiệt bị của bạn. Bạn có muốn tiếp tục?</string>
    <string name="please_select_currency">Hãy chọn loại tiền!</string>
    <string name="error_occurred">Có lỗi xảy ra. Vui lòng thử lại!</string>
    <string name="future_update">Chức này sẽ có ở cập nhật tương lai!</string>
    <string name="text_exchange_rate_lookup">Tra cứu tỷ giá</string>
    <string name="text_calculating_loan_interest">Tính lãi vay</string>
    <string name="text_savings_in_installments">Tiền gửi lãi suất</string>
    <string name="text_calculate_amount_at_end">Tính số tiền nhận được cuối kỳ</string>
    <string name="text_mess_calculate_amount_at_end">Nhập số tiền cần tiết kiệm và thời gian tích lũy, bạn sẽ biết được số tiền nhận được cuối kỳ.</string>
    <string name="text_calculate_amount_every_month">Tính số tiền cần gửi</string>
    <string name="text_mess_calculate_amount_every_month">Nhập số tiền bạn muốn đạt được trong tương lai và thời gian tích lũy, bạn sẽ biết được số tiền cần gửi.</string>
    <string name="text_export_file">Xuất file</string>
    <string name="profile">Hồ sơ</string>
    <string name="text_name">Tên</string>
    <string name="text_email_address">Địa chỉ email</string>
    <string name="exit">Thoát</string>
</resources>