<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_money_bag"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_chart"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_list"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_reminders"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_currency"
            android:icon="@drawable/ic_account14"
            android:title="@string/menu_currency" />
        <item
            android:id="@+id/nav_gallery2"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_gallery" />
    </group>
</menu>