<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:paddingVertical="10dp"
    android:background="@drawable/custom_button_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/notification"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:text="Danh mục đã được thay đổi. Thoát mà không lưu?"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <LinearLayout
        android:id="@+id/ll_update_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/text_khong"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_delete_category"
            android:gravity="center"
            android:text="@string/text_no"
            android:textColor="#FF0000" />

        <TextView
            android:id="@+id/text_co"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_save_category"
            android:gravity="center"
            android:text="@string/text_ok"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>
